# driftbench

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPACT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: template_adapter.py
adapters/simple/: driftbench_run.py
adapters/tbg/: README.md  tbg_adapter.py
baselines/: README.md
baselines/official_pack/: README.md
docs/: ABSTRACT.md
driftbench_core/: __init__.py  adapter.py  core.py  validator.py
examples/: generate_submission.py  scenario_minimal.json  submission_minimal.json
research/: README.md  migration_matrix.md
research/v1_1_draft/: README.md  ambivalence.py  ontology_v1_1_grief.json  scenario_grief_to_acceptance.json
standard/: SPEC.md
standard/v1/: ontology.json
standard/v1/scenarios/: 01_burnout_to_founder.json  02_promotion_vs_founder.json  03_financial_identity.json  04_failure_recovery_to_launch.json  05_promotion_after_launch.json  10_delayed_contradiction.json  11_noise_resistance.json
tests/: test_core.py  test_imports.py  test_regression.py
