[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbench-core"
version = "1.0.0"
description = "Deterministic benchmark core for belief drift and identity tracking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DriftBench" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
driftbench-validate = "driftbench_core.validator:main"

[tool.setuptools]
packages = ["driftbench_core"]
